cmake_minimum_required(VERSION 3.1)

project(str_c11)

add_subdirectory(googletest)
add_subdirectory(array)
add_subdirectory(bitset)
add_subdirectory(deque)
add_subdirectory(forward_list)
add_subdirectory(list)
add_subdirectory(map)
add_subdirectory(queue)
add_subdirectory(set)
add_subdirectory(stack)
add_subdirectory(unordered_map)
add_subdirectory(unordered_set)
add_subdirectory(vector)

