cmake_minimum_required(VERSION 3.1)

project(str_c11)

add_subdirectory(googletest)
add_subdirectory(STL/array)
add_subdirectory(STL/bitset)
add_subdirectory(STL/deque)
add_subdirectory(STL/forward_list)
add_subdirectory(STL/list)
add_subdirectory(STL/map)
add_subdirectory(STL/queue)
add_subdirectory(STL/set)
add_subdirectory(STL/stack)
add_subdirectory(STL/unordered_map)
add_subdirectory(STL/unordered_set)
add_subdirectory(STL/vector)

